--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,7 +42,7 @@ jobs:
             librsvg2-dev
       - name: build it
         working-directory: ./app
-        run: npm install && npm install -g @angular/cli && ng build && npm tauri build
+        run: npm install && npm install -g @angular/cli && ng build && npm run tauri build
       - uses: actions/upload-artifact@v3
         if: matrix.platform == 'ubuntu-latest'
         with:
